--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,10 @@
     <string name="title_notifications">Notifications</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="valtituloprincipal">Fragmentos en Android</string>
+    <string name="valrbtmale">Male</string>
+    <string name="valrbtfemale">Female</string>
+    <string name="valrbtother">Other</string>
+    <string name="valchklicense">License</string>
+    <string name="valchkcar">Have a car?</string>
 </resources>
